# taos-connector-python

./: .gitignore  .grype.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README-CN.md  README.md  build.py  dev.md  note.txt  pyproject.toml  temp  test_taos-ws-py.sh  test_taospy.sh
.github/workflows/: 3.0.yml  audit.yml  build.yml  build_enterprise.yml  build_ws.yml  mac.yml  publish.yml  pypi.yml  release.yml  taos-ws-py-audit.yml  taos-ws-py-compatibility.yml  taos-ws-py-enterprise.yml  taos-ws-py-sbom.yml  taos-ws-py.yml  taos.cfg  test-td-case.yml  test-ubuntu-1804.yml  test-ubuntu-2004.yml  test-ubuntu-2204.yml  test.yml
bench/: bench.py
ci/: build-doc.sh  changelog-generate.sh  extract-changelog.sh  publish.sh  release-ws.sh  release.sh
examples/: bind-multi.py  bind-row.py  connect_cloud_service.py  connect_rest_examples.py  connect_rest_with_req_id_examples.py  connection_usage_native_reference_with_req_id.py  cursor_execute_many.py  cursor_usage_native_reference_with_req_id.py  demo.py  import-json.py  insert-lines.py  json-tag.py  kafka_tmq.py  native_all_type_query.py  native_all_type_stmt.py  native_pandas_example.py  pandas-read-sql-tdengine-cloud.py  pandas-read-sql.py  pep-249.py  query-async.py  query-objectively.py  rest_client.py  rest_client_example.py  rest_client_with_req_id_example.py  rest_connection.py  rest_cursor.py  rest_query.py  result_set_with_req_id_examples.py  schemaless_insert.py  stream.py  subscribe-async.py  tmq.py  tmq_assignment.py  tmq_consumer.py  trades-to-taos.py  ws_all_type_query.py  ws_all_type_stmt.py
examples/cython/: bind-multi.py  connection_usage_native_reference.py  connection_usage_native_reference_with_req_id.py  cursor_execute_many.py  demo.py  import-json.py  insert-lines.py  json-tag.py  pep-249.py  query-async.py  query-objectively.py  result_set_examples.py  result_set_with_req_id_examples.py  schemaless_insert.py  tmq_assignment.py  tmq_consumer.py
src/: common.rs  consumer.rs  cursor.rs  lib.rs
superset/db_engine_specs/: TDengine.py
taos/: __init__.py  _cinterface.c  _cinterface.pxd  _cinterface.pyx  _constants.pxd  _constants.pyx  _objects.c  _objects.pyx  _parser.cpp  _parser.pxd  _parser.pyx  _version.py  bind.py  bind2.py  bind_base.py  cinterface.py  connection.py  constants.py  cursor.py  error.py  field.py  field_v3.py  log.py  result.py  schemaless.py  sqlalchemy.py  statement.py  statement2.py  subscription.py  test_decode_binary.py  tmq.py  utils.py
taos-ws-py/: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml  dev.md  pyproject.toml
taos-ws-py/examples/: connection_execute.py  connection_execute_with_req_id.py  cursor_execute.py  cursor_execute_with_req_id.py  demo.py  query.py  schemaless_example.py  stmt_example.py
taos-ws-py/sh/: build.sh  test.sh
taos-ws-py/src/: common.rs  consumer.rs  cursor.rs  field.rs  lib.rs
taos-ws-py/taosws/: __init__.py  sqlalchemy.py
taos-ws-py/tests/: test_blob.py  test_cloud.py  test_cloud_tmq.py  test_commit_offset.py  test_conn.py  test_consumer.py  test_cursor.py  test_cursor_fetchmany.py  test_cursor_geo.py  test_cursor_logfile.py  test_decimal.py  test_meters.py  test_pandas.py  test_req_id.py  test_schemaless.py  test_sqlalchemy.py  test_sqlalchemy_migration.py  test_stmt.py  test_stmt2.py  test_stmt_geo.py  test_timezone.py  test_tmq.py  test_tmq_assignment.py  utils.py
taosres/: __init__.py  connection.py  cursor.py
taosres/tdengineclient/: errors.py  rest_client.py
taosrest/: __init__.py  connection.py  cursor.py  errors.py  restclient.py  sqlalchemy.py  timeutil.py
taosrest/tdengineclient/: __init__.py  errors.py  restclient.py
tests/: conftest.py  decorators.py  test-stmt-insert-multi-nullable.py  test_bind.py  test_bind2.py  test_bind_base.py  test_cinterface.py  test_cloud_service.py  test_connect_args.py  test_connection.py  test_ctaos.py  test_cursor.py  test_cursor_logfile.py  test_dbutils_conntect_pool.py  test_decode_binary.py  test_exception.py  test_info.py  test_kafka_tmq.py  test_lines.py  test_meters.py  test_native_cursor.py  test_native_many.py  test_pandas.py  test_parse_date.py  test_query.py  test_query_a.py  test_query_blob.py  test_req_id.py  test_rest_api.py  test_rest_client.py  test_rest_connection.py  test_rest_sqlalchemy.py  test_restful_api.py  test_restful_connection.py  test_rfc3339.py  test_sqlalchemy.py  test_sqlalchemy_conntect_pool.py  test_stmt.py  test_stmt2.py  test_stmtV3.py  (+10 more)
tests/test_taos_cython/: test_connect_args.py  test_info.py  test_lines.py  test_native_cursor.py  test_native_many.py  test_query.py  test_query_a.py
