[package]
name = "taos-ws-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "taosws"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
pretty_env_logger = "0.4.0"
log = "0.4"
serde_json = "1"
taos-error = { path = "../taos-error" }
taos-query = { path = "../taos-query" }
taos-ws = { path = "../taos-ws" }

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]