[package]
name = "taos-ws-py"
version = "0.2.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "taosws"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
log = "0.4"
serde_json = "1"
shadow-rs = "0.20.0"
taos = { path = "../taos", default-features = false, features = ["optin", "ws-rustls"] }

[build-dependencies]
shadow-rs = "0.20.0"

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module", "anyhow", "chrono"]
