[tool.poetry]
name = "taospy"
version = "2.3.4"
description = "TDengine connector for python"
authors = ["Taosdata Inc. <support@taosdata.com>"]
license = "MIT"
readme = "README.md"
packages = [
  {include = "taos"},
  {include = "taosrest"}
]

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."sqlalchemy.dialects"]
"taos" = "taos.sqlalchemy:TaosDialect"
"taosrest" = "taosrest.sqlalchemy:TaosRestDialect"


[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
pytz = "*"
iso8601 = "1.0.2"

[tool.poetry.dev-dependencies]
typing = "*"
pytest = [
  { version = "^4.6", python = ">=2.7,<3.0" },
  { version = "^6.2", python = ">=3.7,<4.0" }
]
pdoc = { version = "^7.1.1", python = "^3.7" }
mypy = { version = "^0.910", python = "^3.6" }
black = [{ version = "^21.*", python = ">=3.6.2,<4.0" }]
sqlalchemy = { version = "^1.4", python=">=3.6,<4.0" }
pandas = { version = ">=1.0", python=">=3.8,<4.0"  }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
