[tool.poetry]
name = "taospy"
version = "2.7.19"
description = "TDengine connector for python"
authors = ["Taosdata Inc. <support@taosdata.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "taos" },
  { include = "taosrest" },
  { include = "superset" }
]

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."sqlalchemy.dialects"]
"taos" = "taos.sqlalchemy:TaosDialect"
"taosrest" = "taosrest.sqlalchemy:TaosRestDialect"
"taosws" = "taos.sqlalchemy:TaosWsDialect"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.12"
pytz = "*"
iso8601 = "1.0.2"
requests = ">=2.27.1"
pytest-cov = "^4.0.0"

[tool.poetry.dependencies.taos-ws-py]
version = ">=0.3.0"
python = ">=3.7,<4.0"
optional = true

[tool.poetry.extras]
ws = ["taos-ws-py"]

[tool.poetry.dev-dependencies]
typing = "*"
pytest = [
  { version = "^4.6", python = ">=2.7,<3.0" },
  { version = "^6.2", python = ">=3.7,<4.0" },
]
mypy = { version = "^0.910", python = "^3.6" }
black = [{ version = ">=21.0", python = ">=3.6.2,<4.0" }]
sqlalchemy = { version = "^1.4", python = ">=3.6,<4.0" }
pandas = { version = ">=1.0", python = ">=3.8,<4.0" }
python-dotenv = { version = "0.20.0" }

[build-system]
requires = ["poetry-core>=1.0.5"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119