[package]
name = "taos-ws-py"
version = "0.3.1"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "taosws"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
log = "0.4"
serde_json = "1"
shadow-rs = "0.20.0"
taos = { version = "0.10.20", default-features = false, features = ["optin", "ws-rustls"] }
chrono = "0.4"
rustls = "=0.21.7"
ring = "=0.16.20"

[build-dependencies]
shadow-rs = "0.20.0"

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module", "anyhow", "chrono", "abi3-py37"]
