[package]
name = "taos-ws-py"
version = "0.3.3"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "taosws"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
log = "0.4"
serde_json = "1"
shadow-rs = "0.28.0"
taos = { version = "0.12", git = "https://github.com/taosdata/taos-connector-rust.git" }
pretty_env_logger = "0.5"
chrono = "0.4"
rustls = "=0.21.7"
rustls-webpki = "=0.101.6"
sct = "=0.7.0"
ring = "=0.16.20"

[build-dependencies]
shadow-rs = "0.28.0"

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module", "anyhow", "chrono", "abi3-py37"]
